--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Coming Soon</title>
+    <title>Alternate Thinking - Coming Soon</title>
     <link rel="stylesheet" href="styles.scss"/>
 </head>
 <body>
