--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Alternate Thinking - Coming Soon</title>
-    <link rel="stylesheet" href="/styles.scss"/>
+    <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
     <div class="wrapper">
