--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
-<!DOCTYPE html>
-<head>
-    <title>Alternate Thinking - Coming Soon</title>
-    <link rel="stylesheet" href="https://alternatethinking-site.github.io/site/styles.css"/>
-</head>
-<body>
-    <div class="wrapper">
-        <div class="cs-wrapper">
-          <h1>We are Coming Soon</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Alternate Thinking</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="./styles.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <nav class="navbar bg-primary navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="#">
+          <img src="./assets/pc-display-horizontal.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          Alternate Thinking
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="#">Expertise</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#contact">Contact</a>
+            </li>
+          </ul>
         </div>
       </div>
-</body>
+    </nav>
+    <main>
+      <div class="px-4 py-5 my-5 text-center hero">
+        <h1 class="display-5 fw-bold">Coming Soon</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4 py-4">
+            Complete VOIP Solutions • IT Consulting & Implementation • Home Automation • Customized Embedded Solutions • Programming Services • Crestron Certified Prodigy Dealer
+          </p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="#projects"><button class="btn btn-primary btn-lg px-4 gap-3" type="button">Projects</button></a>
+            <a href="#contact"><button class="btn btn-outline-secondary btn-lg px-4" >Contact</button></a>
+          </div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="px-1 py-1 my-5 text-center">
+        <div id="contact" class="card-footer">
+          <a class="link" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')" style="unicode-bidi: bidi-override; direction: rtl;">eM liamE</a>
+          <p class="phone">Phone: <span style="unicode-bidi: bidi-override; direction: rtl">1904-184 (509)</span></p>
+        </div>
+      </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+  </body>
+</html>
