--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           Alternate Thinking
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon text-white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
@@ -49,7 +49,7 @@
       <div class="px-1 py-1 my-5 text-center">
         <div id="contact" class="card-footer">
           <a class="link" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')" style="unicode-bidi: bidi-override; direction: rtl;">eM liamE</a>
-          <p class="phone">Phone: <span style="unicode-bidi: bidi-override; direction: rtl">1904-184 (509)</span></p>
+
         </div>
       </div>
     </main>
