--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
     </nav>
     <main>
-      <div class="px-4 py-5 my-5 text-center hero">
-        <h1 class="display-5 fw-bold">Coming Soon</h1>
+      <div class="px-4 py-5 my-5 text-center hero background-image">
+        <h3 class="display-5 fw-bold text-white">We design and develop custom embedded systems platforms accross multiple industries.</h3>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4 py-4">
+          <p class="lead mb-4 py-4 text-white">
             Complete VOIP Solutions • IT Consulting & Implementation • Home Automation • Customized Embedded Solutions • Programming Services • Crestron Certified Prodigy Dealer
           </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
