background for text

--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
       </div>
     </nav>
     <main>
-      <div class="px-4 py-5 my-5 text-center hero background-image">
-        <h3 class="display-5 fw-bold text-white">We design and develop custom embedded systems platforms accross multiple industries.</h3>
-        <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4 py-4 text-white">
-            Complete VOIP Solutions • IT Consulting & Implementation • Home Automation • Customized Embedded Solutions • Programming Services • Crestron Certified Prodigy Dealer
-          </p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="#projects"><button class="btn btn-primary btn-lg px-4 gap-3" type="button">Projects</button></a>
-            <a href="#contact"><button class="btn btn-outline-secondary btn-lg px-4" >Contact</button></a>
+      <div class="px-4 py-5 mb-5 text-center hero background-image">
+        <div class="mx-5 my-5 text-center opacity-50 bg-dark">
+          <h3 class="display-5 fw-bold text-white">We design and develop custom embedded systems platforms accross multiple industries.</h3>
+          <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4 py-4 text-white">
+              Complete VOIP Solutions • IT Consulting & Implementation • Home Automation • Customized Embedded Solutions • Programming Services • Crestron Certified Prodigy Dealer
+            </p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+              <a href="#projects"><button class="btn btn-primary btn-lg px-4 gap-3" type="button">Projects</button></a>
+              <a href="#contact"><button class="btn btn-outline-secondary btn-lg px-4" >Contact</button></a>
+            </div>
           </div>
         </div>
       </div>
@@ -49,7 +51,6 @@
       <div class="px-1 py-1 my-5 text-center">
         <div id="contact" class="card-footer">
           <a class="link" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')" style="unicode-bidi: bidi-override; direction: rtl;">eM liamE</a>
-
         </div>
       </div>
     </main>
