--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </nav>
     <main>
       <div class="px-4 py-5 mb-5 text-center hero background-image">
-        <div class="mx-5 my-5 text-center opacity-50 bg-dark">
-          <h3 class="display-5 fw-bold text-white">We design and develop custom embedded systems platforms accross multiple industries.</h3>
+        <div class="mx-5 my-5 px-5 py-5 text-center opacity-25 bg-dark">
+          <h4 class="display-5 fw-bold text-white">We design and develop custom embedded systems platforms accross multiple industries.</h4>
           <div class="col-lg-6 mx-auto">
             <p class="lead mb-4 py-4 text-white">
               Complete VOIP Solutions • IT Consulting & Implementation • Home Automation • Customized Embedded Solutions • Programming Services • Crestron Certified Prodigy Dealer
