--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link href="./styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <nav class="navbar bg-primary navbar-expand-lg">
+    <nav class="navbar bg-light navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">
-          <img src="./assets/pc-display-horizontal.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-          Alternate Thinking
+          <img src="./assets/blacksmall.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon text-white"></span>
@@ -34,7 +33,7 @@
     </nav>
     <main>
       <div class="px-4 py-5 mb-5 text-center hero background-image">
-        <div class="mx-5 my-5 px-5 py-5 text-center opacity-25 bg-dark">
+        <div class="mx-5 my-5 px-5 py-5 text-center backdrop">
           <h4 class="display-5 fw-bold text-white">We design and develop custom embedded systems platforms accross multiple industries.</h4>
           <div class="col-lg-6 mx-auto">
             <p class="lead mb-4 py-4 text-white">
