--- a/index.html
+++ b/index.html
@@ -41,15 +41,10 @@
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
               <a href="#projects"><button class="btn btn-primary btn-lg px-4 gap-3" type="button">Projects</button></a>
-              <a href="#contact"><button class="btn btn-outline-secondary btn-lg px-4" >Contact</button></a>
+              <a href="#contact"></a>
+              <a class="link" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')"><button class="btn btn-outline-secondary btn-lg px-4" >Contact</button></a>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="divider"></div>
-      <div class="px-1 py-1 my-5 text-center">
-        <div id="contact" class="card-footer">
-          <a class="link" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')" style="unicode-bidi: bidi-override; direction: rtl;">eM liamE</a>
         </div>
       </div>
     </main>
