--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <nav class="navbar bg-light navbar-expand-lg">
+    <nav class="navbar bg-primary navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">
           <img src="./assets/blacksmall.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -41,8 +41,7 @@
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
               <a href="#projects"><button class="btn btn-primary btn-lg px-4 gap-3" type="button">Projects</button></a>
-              <a href="#contact"></a>
-              <a class="link" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')"><button class="btn btn-outline-secondary btn-lg px-4" >Contact</button></a>
+              <a class="link" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')"><button class="btn btn-secondary btn-lg px-4" >Contact</button></a>
             </div>
           </div>
         </div>
