--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </nav>
     <main>
-      <div class="px-4 py-5 mb-5 text-center hero background-image">
+      <div class="px-4 py-5 text-center hero background-image">
         <div class="mx-5 my-5 px-5 py-5 text-center backdrop">
           <h4 class="display-5 fw-bold text-white">We design and develop custom embedded systems platforms accross multiple industries.</h4>
           <div class="col-lg-6 mx-auto">
