--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link text-white" href="#">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#contact">Contact</a>
+              <a class="nav-link text-white" href="#contact"><button class="btn btn-outline-light btn-lg px-4">Contact</button></a>
             </li>
           </ul>
         </div>
@@ -41,7 +41,7 @@
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
               <a href="#projects"><button class="btn btn-primary btn-lg px-4 gap-3" type="button">Projects</button></a>
-              <a class="link" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')"><button class="btn btn-secondary btn-lg px-4" >Contact</button></a>
+              <a class="link" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')"><button class="btn btn-secondary btn-lg px-4">Contact</button></a>
             </div>
           </div>
         </div>
