--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <nav class="navbar bg-primary navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">
-          <img src="./assets/blacksmall.jpg" alt="Logo" width="180" height="90" class="d-inline-block align-text-top">
+          <img src="./assets/pc-display-horizontal.svg" alt="Logo" width="60" height="30" class="d-inline-block align-text-top">
+          Alternate Thinking
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon text-white"></span>
@@ -19,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="#">Expertise</a>
+              <a class="nav-link active text-white px-4 my-2" aria-current="page" href="#">Expertise</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Projects</a>
+              <a class="nav-link text-white px-4 my-2" href="#">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#contact"><button class="btn btn-outline-light btn-lg px-4">Contact</button></a>
+              <a class="nav-link text-white" href="#contact"><button class="btn btn-outline-light px-4">Contact</button></a>
             </li>
           </ul>
         </div>
