--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link text-white px-4 my-2" href="#">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#contact"><button class="btn btn-outline-light px-4">Contact</button></a>
+              <a class="nav-link text-white" href="javascript:window.location.href=atob('c2FsZXNAYWx0ZXJuYXRldGhpbmtpbmcuY29t')"><button class="btn btn-outline-light px-4">Contact</button></a>
             </li>
           </ul>
         </div>
